Set a different image to display on mobile

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
       <div class="container">
           <div class="row">
             <div class="col-md-6 contact-column-left">
-              <img src="Assets/cotnact.png" alt="A mailbox">
+              <img src="Assets/contact.png" alt="A mailbox" class="contact-desktop">
+              <img src="Assets/contact_mobile.png" alt="A mailbox" class="contact-mobile">
             </div>
 
             <div class="col-md-6">
