Saved the name to a variable thats displayed on the alert

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <input type="checkbox" name="agree" required> I agree to the terms and conditions.
                   </label>
                   
-                  <button type="submit">Submit</button>
+                  <button type="submit" onclick="storeName()">Submit</button>
               </form>
             </div>
           </div>
