Accidentally used IDs twice instead of classes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <button class="hero-button" onclick="location.href='#sign-up'">Scroll to content</button>
   </section>
 
-  <section id="documentation">
+  <section class="documentation" id="website-documentation">
     <h3>Documentation:</h3>
     <p>
       This website is using:
@@ -102,7 +102,7 @@
 
   </section>
 
-  <section id="documentation">
+  <section class="documentation" id="form-documentation">
     <h3>Documentation:</h3>
     <p>
       Above I have created a form with multiple form fields. On form submit the <b>formmSubmission(event)</b> function is called, along with an <b>onclick</b> event that's added to the Submit button, this calls the <b>storeName</b> function. The <b>storeName</b> uses DOM to get the value of the Name field and set it to a variable. Next, then the <b>formSubmission</b> function removes the default form submit settings, displays an alert with some text and resets the form.
