--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#hero-section" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#sign-up" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="#website-documentation" class="nav-link">Site Documentation</a></li>
+          <li class="nav-item"><a href="#sign-up" class="nav-link">Form</a></li>
+          <li class="nav-item"><a href="#form-documentation" class="nav-link">Form Documentation</a></li>
         </ul>
       </header>
     </div>
