--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 
   </section>
 
+  <section class="documentation" id="loop-documentation">
+    <h3>Documentation:</h3>
+    <p>
+      Above I have created a form with multiple form fields. On form submit the <code>formmSubmission(event)</code>
+      function is called, along with an <code>onclick</code> event that's added to the Submit button, this calls the
+      <code>storeName</code> function. The <code>storeName</code> uses DOM to get the value of the Name field and set it
+      to a variable. Next, then the <code>formSubmission</code> function removes the default form submit settings,
+      displays an alert with some text and resets the form.
+      <br><br>
+      <b>Note: This form does not store entires, this can be accomplished using PHP</b>
+    </p>
+  </section>
+
   <script src="index.js"></script>
 </body>
 
