--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
   <section class="documentation" id="loop-documentation">
     <h3>Documentation:</h3>
     <p>
-      The looping section has two elements, a button and an empty <code>div</code>. When the button is clicked, it calls the <code>startWhileLoop()</code> function.
+      The looping section has two elements, a button and an empty <code>div</code>. When the button is clicked, it calls the <code>startWhileLoop()</code> function. This function has a loop that outputs the value of 0, and then on every loop it adds 1 to it until it reaches 10.
+      <br><br>
+      <b>Note: The delay between each loop output was added for visual effect, your computer can loop through it in millaseconds so you won't usually see the loop delay.</b>
     </p>
   </section>
 
