Cleaned upa  few glitches and updated the links

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <header class="d-flex justify-content-center py-3">
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#hero-section" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#website-documentation" class="nav-link">Site Documentation</a></li>
-          <li class="nav-item"><a href="#sign-up" class="nav-link">Form</a></li>
-          <li class="nav-item"><a href="#form-documentation" class="nav-link">Form Documentation</a></li>
+          <li class="nav-item"><a href="#sign-up" class="nav-link">Forms</a></li>
+          <li class="nav-item"><a href="#conditional-logic" class="nav-link">Conditional Logic</a></li>
+          <li class="nav-item"><a href="#js-loops" class="nav-link">JS Loops</a></li>
         </ul>
       </header>
     </div>
