Added social embed info

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eli - QA Lab Sessions</title>
   <link rel="icon" type="image/x-icon" href="Assets/Favicon.svg">
+  <meta property="og:title" content="QA Software Development Course Examples">
+  <meta property="og:description" content="Just a simple one-page website for my QA Course Labs. Throughout the site you will find all the functionality the lab outlines intergrated in this website. I have also added Documentation sections to explain why and how I did things.">
+  <meta property="og:image" content="https://github.com/theLadEli/qa-course/blob/main/Assets/image-embed.png">
 
 
   <!-- Bootstrap -->
