--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="Assets/Favicon.svg">
   <meta property="og:title" content="QA Software Development Course Examples">
   <meta property="og:description" content="Just a simple one-page website for my QA Course Labs. Throughout the site you will find all the functionality the lab outlines intergrated in this website. I have also added Documentation sections to explain why and how I did things.">
-  <meta property="og:image" content="https://github.com/theLadEli/qa-course/blob/main/Assets/image-embed.png">
+  <meta property="og:image" content="https://github.com/theLadEli/qa-course/blob/main/Assets/Image%20Embed.png">
 
 
   <!-- Bootstrap -->
