Added JS Documentation link

--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
 
   <section id="hero-section">
     <h1>QA Course Labs</h1>
-    <p>Just a simple one-page website for my QA Course Labs. Throughout the site you will find all the functionality the
+    <p>
+      Just a simple one-page website for my QA Course Labs. Throughout the site you will find all the functionality the
       lab outlines intergrated in this website. I have also added Documentation sections to explain why and how I did
-      things.</p>
-    <button class="hero-button" onclick="location.href='#sign-up'">Scroll to content</button>
+      things.
+      <br><br>
+      If you're looking for some more in-depth JS documentation, checkout the <code>ReadME</code> file in link below!
+    </p>
+    <button class="hero-button-primary"  onclick="window.location.href='https://github.com/theLadEli/my-full-stack-journey/tree/main/JavaScript';">JS Documentation</button>
+    <button class="hero-button-secondary" onclick="location.href='#sign-up'">Scroll to content</button>
   </section>
 
   <section class="documentation" id="website-documentation">
