--- a/index.html
+++ b/index.html
@@ -418,6 +418,8 @@
     </p>
   </section>
 
+  <!-- Use JSON query to make get request on button click to get random dog image from https://dog.ceo/api/breeds/image/random -->
+
   <script src="script.js"></script>
   <script src="prism/prism.js"></script>
 </body>
