Added api request

--- a/index.html
+++ b/index.html
@@ -420,6 +420,24 @@
 
   <!-- Use JSON query to make get request on button click to get random dog image from https://dog.ceo/api/breeds/image/random -->
 
+  <!-- JS API Requests -->
+  <section id="api-requests">
+    <div class="container">
+      <div class="row">
+        <!-- Left Column -->
+        <div class="col-md-6 loop-left-column">
+          <h2>JS API Requests</h2>
+          <p>A random image is loaded on page load from using an API. You can also click below to refresh the image!</p>
+          <button onclick="newDogImage()">New Image</button>
+        </div>
+        <!-- Right Column -->
+        <div class="col-md-6 loop-right-column">
+          <img id="dog-image" src="" alt="A random dog image">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="script.js"></script>
   <script src="prism/prism.js"></script>
 </body>
