--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <li class="nav-item"><a href="#conditional-logic" class="nav-link">Conditional Logic</a></li>
           <li class="nav-item"><a href="#js-loops" class="nav-link">JS Loops</a></li>
           <li class="nav-item"><a href="#js-events" class="nav-link">Events</a></li>
+          <li class="nav-item"><a href="#api-requests" class="nav-link">APIs</a></li>
         </ul>
       </header>
     </div>
