Updated ReadMe and links

--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
     <p>
       Just a simple one-page website for my QA Course Labs. Throughout the site I intergrated all the functionality outlined in the lab. I have also added Documentation between the sections to explain why and how I did things.
       <br><br>
-      If you're looking for some more in-depth JS documentation, checkout the <code>ReadME</code> file using the link below. There I have outlined most of the key JavaScript concepts, what they do, along with examples of usage. It's continuously updated, so feel free to star it!
+      Further documentation can be found in the repositories <a href="https://github.com/theLadEli/qa-course">ReadMe.md</a> file, linked below. Contributions are welcome, if you see any mistakes, things to add or want to add documentations please feel free to do so.
+      <br><br>
+      If you're looking for some more in-depth JS documentation, checkout the JS Documentation file using the link below. There I have outlined most of the key JavaScript concepts, what they do, along with examples of usage. It's continuously updated, so feel free to star it!
+      <br><br>
+
     </p>
 
-    <button class="hero-button-primary" onclick="window.location.href='https://github.com/theLadEli/my-full-stack-journey/tree/main/JavaScript';">JS Documentation</button>
-    <button class="hero-button-secondary" onclick="location.href='#sign-up'">Scroll to content</button>
+    <button class="hero-button-primary" onclick="window.location.href='https://github.com/theLadEli/qa-course';">ReadME</button>
+    <button class="hero-button-secondary" onclick="location.location.href='https://github.com/theLadEli/my-full-stack-journey/tree/main/JavaScript'">JS Documentation</button>
   </section>
 
   <!-- Website Documentation -->
