Updated hero padding

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </p>
 
     <button class="hero-button-primary" onclick="window.location.href='https://github.com/theLadEli/qa-course';">ReadME</button>
-    <button class="hero-button-secondary" onclick="location.location.href='https://github.com/theLadEli/my-full-stack-journey/tree/main/JavaScript'">JS Documentation</button>
+    <button class="hero-button-secondary" onclick="location.location.href='https://github.com/theLadEli/my-full-stack-journey/tree/main/JavaScript';">JS Documentation</button>
   </section>
 
   <!-- Website Documentation -->
